Fininshing the second half of nth challenge.

--- a/Task 3/index.html
+++ b/Task 3/index.html
@@ -3,55 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Task 3/style.css" />
-    <title>Task-3</title>
+    <link rel="stylesheet" href="/Task 1/style.css" />
+    <title>Task-1</title>
   </head>
   <body>
     <div class="container">
-      <div class="box">
-        <div>*</div>
-        <div>*</div>
-        <div>*</div>
-      </div>
-      <div class="box">
-        <div>X</div>
-        <div>X</div>
-        <div>X</div>
-      </div>
-      <div class="box">
-        <div>*</div>
-        <div>*</div>
-        <div>*</div>
-      </div>
-      <div class="box">
-        <div>X</div>
-        <div>X</div>
-        <div>X</div>
-      </div>
-      <div class="box">
-        <div>*</div>
-        <div>*</div>
-        <div>*</div>
-      </div>
-      <div class="box">
-        <div>X</div>
-        <div>X</div>
-        <div>X</div>
-      </div>
-      <div class="box">
-        <div>*</div>
-        <div>*</div>
-        <div>*</div>
-      </div>
-      <div class="box">
-        <div>X</div>
-        <div>X</div>
-        <div>X</div>
-      </div>
-      <div class="box">
-        <div>*</div>
-        <div>*</div>
-        <div>*</div>
+      <div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
       </div>
     </div>
   </body>
